# pros

./: Cargo.toml
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/interrupts/: keyboard.rs  mod.rs  timer.rs
tests/: basic_boot.rs  heap_alloc.rs  stack_overflow.rs
