[package]
name = "pros"
version = "0.1.0"
authors = ["proelbtn <contact@proelbtn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
linked_list_allocator = "0.8.0"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.12.1"

[package.metadata.bootimage]
test-args = [
  "-display", "none",
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "stack_overflow"
harness = false
